[package]
name = "lycopersicum"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/isopropyletherperoxide/lycopersicum"
description = "A simple Pomodoro Timer"
categories = ["date-and-time"]
keywords = ["productivity", "pomodoro"]
authors = ["Aryl Halide"]

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
notify-rust = "4.8.0"
